# fesolver

./: .gitignore  CMakeLists.txt  README.md  bashrc  install.sh
src/: main.cpp  solver.cpp  solver.hpp  top.hpp
src/boundary/: boundary.cpp  boundary.hpp
src/eqn/: eqnData.cpp  eqnData.hpp  incompNS.cpp  initial.cpp
src/finite_element/: finite_element.cpp
src/headers/: scratch_structs.hpp  top.hpp
src/init/: initialize.cpp
src/linear_solver/: linear_solver.cpp
src/main/: main.cpp
src/matrix/: init_matrix.cpp
src/mesh/: mesh.cpp  mesh.hpp  refinement.cpp
src/output/: output.cpp
src/parameters/: declare_parameters.cpp  parameters.cpp  parameters.hpp  read_parameters.cpp
src/preconditioner/: preconditioner.cpp  preconditioner.hpp
src/prm/: prm.cpp  prm.hpp
src/solver/: advection.cpp  diffusion.cpp  gradient.cpp  projection.cpp  solver.cpp  solver.hpp
tutorial/lid_cavity/: block.ucd
tutorial/lid_cavity/mesh_generator/: step-1.cc
